# Lore

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  lore.toml  veridikt.toml
.github/workflows/: ci.yml  lint-example.yml
crates/lore_annotations/: Cargo.toml
crates/lore_annotations/src/: binder.rs  lang.rs  lib.rs  scanner.rs  scoping.rs
crates/lore_annotations/tests/: binder.rs  rust.rs  scanner.rs  scoping.rs  spec_examples.rs
crates/lore_annotations/tests/common/: mod.rs
crates/lore_cli/: Cargo.toml
crates/lore_cli/src/: lib.rs  main.rs  manifest.rs  output.rs
crates/lore_cli/src/commands/: ask.rs  graph.rs  history.rs  init.rs  lint.rs  mod.rs  project.rs  scan.rs  stale.rs  stats.rs
crates/lore_cli/src/packs/: builtin.rs  grammar.rs  mod.rs
crates/lore_cli/tests/: cli_ask.rs  cli_derive.rs  cli_graph.rs  cli_history.rs  cli_init.rs  cli_lint.rs  cli_packs.rs  cli_reconcile.rs  cli_scan.rs  conformance.rs  manifest.rs  perf.rs
crates/lore_cli/tests/fixtures/ask_project/src/pay/: svc.py
crates/lore_cli/tests/fixtures/codeowners_project/: lore.toml
crates/lore_cli/tests/fixtures/codeowners_project/src/: svc.py
crates/lore_cli/tests/fixtures/derive_calls/: lore.toml
crates/lore_cli/tests/fixtures/derive_project/: lore.toml
crates/lore_cli/tests/fixtures/derive_project/src/pay/: svc.py
crates/lore_cli/tests/fixtures/lint_clean/: lore.toml
crates/lore_cli/tests/fixtures/lint_clean/src/: m.py
crates/lore_cli/tests/fixtures/lint_off/src/: m.py
crates/lore_cli/tests/fixtures/lint_project/src/pay/: svc.py
crates/lore_cli/tests/fixtures/lint_project/src/user/: notify.py
crates/lore_cli/tests/fixtures/policy_unknown/: lore.toml
crates/lore_cli/tests/fixtures/policy_unknown/src/: svc.py
crates/lore_cli/tests/fixtures/scan_project/: lore.toml
crates/lore_cli/tests/fixtures/scan_project/misc/: orphan.py
crates/lore_cli/tests/fixtures/scan_project/src/pay/: broken.py  svc.py  web.ts
crates/lore_derive/: Cargo.toml
crates/lore_derive/src/: cache.rs  extract.rs  facts.rs  imports.rs  lib.rs  resolve.rs
crates/lore_derive/src/lang/: mod.rs
crates/lore_derive/src/lang/python/: calls.scm  decls.scm  mod.rs  touches.scm
crates/lore_derive/src/lang/typescript/: calls.scm  decls.scm  mod.rs  touches.scm
crates/lore_derive/tests/: cache.rs  python.rs  typescript.rs
crates/lore_derive/tests/common/: mod.rs
crates/lore_graph/: Cargo.toml
crates/lore_graph/src/: codeowners.rs  engine.rs  exec.rs  hygiene.rs  lib.rs  matrix.rs  query.rs  reconcile.rs  resolve.rs  structure.rs  surface.rs  table.rs  util.rs
crates/lore_graph/tests/: derived.rs  graph.rs  query.rs  reconcile.rs
crates/lore_intent/: Cargo.toml
crates/lore_intent/src/: lib.rs  pack.rs  parse.rs
crates/lore_intent/tests/: parse.rs  types.rs
crates/veridikt_annotations/: Cargo.toml
crates/veridikt_annotations/src/: binder.rs  lib.rs  scanner.rs  scoping.rs
crates/veridikt_annotations/tests/: binder.rs  rust.rs  scanner.rs  scoping.rs  spec_examples.rs
crates/veridikt_cli/: Cargo.toml
crates/veridikt_cli/src/: lib.rs  main.rs  manifest.rs  output.rs
crates/veridikt_cli/src/commands/: ask.rs  graph.rs  history.rs  init.rs  lint.rs  mcp.rs  mod.rs  project.rs  scan.rs  stale.rs  stats.rs
crates/veridikt_cli/src/packs/: builtin.rs  grammar.rs  mod.rs
crates/veridikt_cli/tests/: cli_ask.rs  cli_derive.rs  cli_graph.rs  cli_history.rs  cli_init.rs  cli_lint.rs  cli_mcp.rs  cli_packs.rs  cli_reconcile.rs  cli_scan.rs  conformance.rs  manifest.rs  perf.rs
crates/veridikt_cli/tests/fixtures/ask_project/: veridikt.toml
crates/veridikt_cli/tests/fixtures/ask_project/src/pay/: svc.py
crates/veridikt_cli/tests/fixtures/codeowners_project/: CODEOWNERS
crates/veridikt_cli/tests/fixtures/codeowners_project/src/: svc.py
crates/veridikt_cli/tests/fixtures/derive_calls/src/pay/: svc.py
crates/veridikt_cli/tests/fixtures/derive_calls/src/user/: u.py
crates/veridikt_cli/tests/fixtures/derive_project/src/pay/: svc.py
crates/veridikt_cli/tests/fixtures/derive_project/src/user/: u.py
crates/veridikt_cli/tests/fixtures/lint_clean/src/: m.py
crates/veridikt_cli/tests/fixtures/lint_off/: veridikt.toml
crates/veridikt_cli/tests/fixtures/lint_off/src/: m.py
crates/veridikt_cli/tests/fixtures/lint_project/: veridikt.toml
crates/veridikt_cli/tests/fixtures/lint_project/src/pay/: svc.py
crates/veridikt_cli/tests/fixtures/lint_project/src/user/: notify.py
crates/veridikt_cli/tests/fixtures/mcp_project/: EVAL.md  veridikt.toml
crates/veridikt_cli/tests/fixtures/mcp_project/src/: payments.py
crates/veridikt_cli/tests/fixtures/policy_unknown/src/: svc.py
crates/veridikt_cli/tests/fixtures/scan_project/misc/: orphan.py
crates/veridikt_cli/tests/fixtures/scan_project/src/pay/: broken.py  svc.py  web.ts
crates/veridikt_derive/: Cargo.toml
crates/veridikt_derive/src/: cache.rs  extract.rs  imports.rs  lib.rs  resolve.rs
crates/veridikt_derive/tests/: cache.rs  python.rs  typescript.rs
crates/veridikt_graph/: Cargo.toml
crates/veridikt_graph/src/: codeowners.rs  engine.rs  exec.rs  hygiene.rs  lib.rs  matrix.rs  query.rs  reconcile.rs  resolve.rs  structure.rs  surface.rs  table.rs
crates/veridikt_graph/tests/: derived.rs  graph.rs  query.rs  reconcile.rs
crates/veridikt_intent/: Cargo.toml
crates/veridikt_intent/src/: lib.rs  pack.rs  parse.rs
crates/veridikt_intent/tests/: parse.rs  types.rs
docs/: README.md  annotating.md  lore-decisions.md  lore-guidelines.md  lore-roadmap.md  lore-spec.md  veridikt-decisions.md  veridikt-guidelines.md  veridikt-roadmap.md  veridikt-spec.md
docs/declared-intent/: README.md
docs/derived-facts/: README.md
docs/reconciliation/: README.md
examples/ci-sample/: veridikt.toml
examples/ci-sample/src/: api.py  billing.py
packs/go/: lore-lang.toml
packs/go/queries/: bind.scm  derive.scm
packs/java/: veridikt-lang.toml
packs/java/queries/: bind.scm  (+1 more)
packs/python/: lore-lang.toml  veridikt-lang.toml
packs/rust/: veridikt-lang.toml
packs/typescript/: veridikt-lang.toml
(+64 files in other folders)
