[workspace]
resolver = "2"
members = [
    "crates/lore_intent",
    "crates/lore_annotations",
    "crates/lore_graph",
    "crates/lore_cli",
]

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.lints.clippy]
# The dogfooding pattern (D-050d) is doc comment, blank line, @lore block,
# item — the blank line is what keeps the @lore block out of the doc run.
empty_line_after_doc_comments = "allow"

[workspace.dependencies]
lore_intent = { path = "crates/lore_intent" }
lore_annotations = { path = "crates/lore_annotations" }
lore_graph = { path = "crates/lore_graph" }
# tree-sitter pinned: grammar churn is roadmap risk 4
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# preserve_order: [modules] glob order is normative (§7.5 first-match fallback)
toml = { version = "0.8", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
