[workspace]
resolver = "2"
members = [
    "crates/veridikt_intent",
    "crates/veridikt_annotations",
    "crates/veridikt_derive",
    "crates/veridikt_graph",
    "crates/veridikt_cli",
]

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.lints.clippy]
# The dogfooding pattern (D-050d) is doc comment, blank line, @veridikt block,
# item — the blank line is what keeps the @veridikt block out of the doc run.
empty_line_after_doc_comments = "allow"

[workspace.dependencies]
veridikt_intent = { path = "crates/veridikt_intent" }
veridikt_annotations = { path = "crates/veridikt_annotations" }
veridikt_derive = { path = "crates/veridikt_derive" }
veridikt_graph = { path = "crates/veridikt_graph" }
# tree-sitter pinned: grammar churn is roadmap risk 4
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
# tree-sitter 0.25 query cursors are streaming iterators
streaming-iterator = "0.1"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# preserve_order: [modules] glob order is normative (§7.5 first-match fallback)
toml = { version = "0.8", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
