[package]
name = "lore_annotations"
version.workspace = true
edition.workspace = true

[dependencies]
lore_intent.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-rust.workspace = true
globset.workspace = true

[lints]
workspace = true
