[package]
name = "lore_annotations"
version.workspace = true
edition.workspace = true

[dependencies]
lore_intent.workspace = true
# tree-sitter core (Language/Query/Parser); the generic binder needs it. The
# grammar crates are dev-deps only — packs supply grammars to the CLI (D-070d).
tree-sitter.workspace = true
streaming-iterator.workspace = true
globset.workspace = true

[dev-dependencies]
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-rust.workspace = true

[lints]
workspace = true
