[package]
name = "lore_cli"
version.workspace = true
edition.workspace = true

[dependencies]
lore_intent.workspace = true
lore_annotations.workspace = true
lore_derive.workspace = true
lore_graph.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "lore"
path = "src/main.rs"

[lints]
workspace = true
