[package]
name = "lore_cli"
version.workspace = true
edition.workspace = true

[dependencies]
lore_intent.workspace = true
lore_annotations.workspace = true
lore_derive.workspace = true
lore_graph.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
# Grammar crates are dependencies of lore_cli ONLY (D-070d): the CLI maps a
# pack's [grammar] name to a statically linked tree-sitter handle and passes
# it to the adapters; lore_annotations/lore_derive keep them as dev-deps.
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "lore"
path = "src/main.rs"

[lints]
workspace = true
