[package]
name = "veridikt_cli"
version.workspace = true
edition.workspace = true

[dependencies]
veridikt_intent.workspace = true
veridikt_annotations.workspace = true
veridikt_derive.workspace = true
veridikt_graph.workspace = true
globset.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
# Grammar crates are dependencies of veridikt_cli ONLY (D-070d): the CLI maps a
# pack's [grammar] name to a statically linked tree-sitter handle and passes
# it to the adapters; veridikt_annotations/veridikt_derive keep them as dev-deps.
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "veridikt"
path = "src/main.rs"

[lints]
workspace = true
